<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/covidback"
    tools:context=".IndianData">



    <TextView
        android:id="@+id/tag_accessibility_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indian_data"
        android:textColor="@color/teal_200"
        android:textSize="40sp"
        android:textStyle="italic|bold|normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/total_cases"
        android:textColor="#ba160c"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_accessibility_heading" />

    <TextView
        android:id="@+id/totalCasesAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold|normal|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/recovered"
        android:textColor="#ba160c"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalCasesAns"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/recoveredTotalAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold|normal|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recovered"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/recoveredToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/recovered_new"
        android:textColor="#ba160c"

        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoveredTotalAns" />

    <TextView
        android:id="@+id/todayCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_cases"
        android:textColor="#ba160c"
        android:textSize="25sp"
        android:layout_marginTop="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecoveredTodayAns"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/RecoveredTodayAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold|normal|italic"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoveredToday" />

    <TextView
        android:id="@+id/todayCasesAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold|normal|italic"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayCases" />

    <TextView
        android:id="@+id/todayDeath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_deaths"
        android:layout_marginTop="15sp"
        android:textColor="#ba160c"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayCasesAns" />

    <TextView
        android:id="@+id/todayDeathAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold|normal|italic"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayDeath"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/TotalDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_deaths"
        android:layout_marginTop="15sp"
        android:textColor="#ba160c"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayDeathAns" />

    <TextView
        android:id="@+id/totalDeathAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold|normal|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TotalDeaths" />




</androidx.constraintlayout.widget.ConstraintLayout>